// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Timeline Card media > should match the snapshot ( IMAGE ) 1`] = `
<div>
  <div
    class="sc-bXdtCk hRPEpE card-media-wrapper card-media"
    mode="VERTICAL_ALTERNATING"
  >
    <div
      class="sc-hKDTPf kVfjuk"
      height="200"
    >
      <img
        alt="Image"
        class="sc-fmZSGO epZatZ"
        data-testid="timeline-card-content-image"
        height="auto"
        loading="lazy"
        mode="VERTICAL_ALTERNATING"
        src="https://picsum.photos/200/300"
        width="100%"
      />
    </div>
  </div>
  <div
    class="sc-dYOLZc GbEGl"
    mode="VERTICAL_ALTERNATING"
  >
    <div
      class="sc-hBDmJg jTlGOJ"
    />
    <h2
      class="sc-elFkmj gpWDgH card-sub-title card-subtitle"
    >
      This is another test
    </h2>
  </div>
</div>
`;

exports[`Timeline Card media > should match the snapshot ( VIDEO ) 1`] = `
<div>
  <div
    class="sc-bXdtCk hRPEpE card-media-wrapper card-media"
    mode="VERTICAL_ALTERNATING"
  >
    <iframe
      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
      allowfullscreen=""
      class="sc-hoLldG eQsmdl"
      data-testid="timeline-card-content-video"
      loading="lazy"
      src="https://www.youtube.com/watch?v=9bZkp7q19f0?enablejsapi=1"
      title="Video"
    />
  </div>
  <div
    class="sc-dYOLZc GbEGl"
    mode="VERTICAL_ALTERNATING"
  >
    <div
      class="sc-hBDmJg jTlGOJ"
    />
    <h2
      class="sc-elFkmj gpWDgH card-sub-title card-subtitle"
    >
      This is another test
    </h2>
  </div>
</div>
`;
